# LM_project

./: .gitignore  CMakeLists.txt  README.md
docs/: DB_MA_RI.pptx  function_tree.pptx
mmodel_util/: CMakeLists.txt  LM_eng.cpp  LM_eng.h  LTI_descSyst.cpp  LTI_descSyst.h  Matrix3DXcd.cpp  Matrix3DXcd.h  Matrix3DXd.cpp  Matrix3DXd.h  fData.cpp  fData.h  orchestrators.cpp  orchestrators.h
res/: Slink_a=100um_b=400um.s2p  Slink_a=100um_b=425um.s2p  Slink_a=100um_b=450um.s2p  Slink_a=100um_b=475um.s2p  Slink_a=100um_b=500um.s2p  Slink_a=100um_b=525um.s2p  Slink_a=100um_b=550um.s2p  Slink_a=100um_b=575um.s2p  Slink_a=100um_b=600um.s2p  bondwire_with_strip_design1.s2p  bondwire_with_strip_design2.s2p
res/inductor_2007Nov25/: inductor_1_width_3_dielectric_35.s2p  inductor_1_width_4_dielectric_35.s2p  inductor_1_width_5_dielectric_35.s2p  inductor_1_width_6_dielectric_35.s2p
res/test_res_dir/: README.txt  audioamp.txt  bondwire_with_strip_design3.s4p  test_MatrixXcd_data.txt  test_MatrixXd_data.csv  test_MatrixXd_data.txt  test_bad_vec_data.txt  test_vec_data.csv  test_vec_data.txt  tmp.csv
src/: main.cpp  orchestrators.cpp  orchestrators.h
tests/: CMakeLists.txt  tests_Eigen.cpp  tests_Eigen.h  tests_LM_eng.cpp  tests_LM_eng.h  tests_LM_eng_2.cpp  tests_LTI_descSyst.cpp  tests_LTI_descSyst.h  tests_Matrix3DXcd.cpp  tests_Matrix3DXcd.h  tests_Matrix3DXd.cpp  tests_Matrix3DXd.h  tests_eigenUtils.cpp  tests_eigenUtils.h  tests_fData.cpp  tests_fData.h  tests_numUtils.cpp  tests_numUtils.h  tests_orches.cpp  tests_orches.h
utils_XYQ/: CMakeLists.txt  eigenUtils.cpp  eigenUtils.h  numUtils.cpp  numUtils.h  timeUtils.cpp
